test_suite/tests/ui/expected-string/character.stderr
error: expected serde rename attribute to be a string: `rename = "..."`
 --> $DIR/character.rs:6:22
  |
6 |     #[serde(rename = 'a')]
  |                      ^^^

error: aborting due to previous error

